RESOLVED FIXED147127
REGRESSION (r174287): Flash of black when opening a new web view or navigating to a new page
https://bugs.webkit.org/show_bug.cgi?id=147127
Summary REGRESSION (r174287): Flash of black when opening a new web view or navigatin...
Tim Horton
Reported 2015-07-20 15:30:03 PDT
REGRESSION (r174287): Flash of black when opening a new web view or navigating to a new page
Attachments
Patch (3.96 KB, patch)
2015-07-20 15:30 PDT, Tim Horton
simon.fraser: review+
Tim Horton
Comment 1 2015-07-20 15:30:39 PDT
Tim Horton
Comment 2 2015-07-20 15:34:50 PDT
Note You need to log in before you can comment on or make changes to this bug.