REGRESSION (r174287): Flash of black when opening a new web view or navigating to a new page https://bugs.webkit.org/show_bug.cgi?id=147127 <rdar://problem/21474317>

Reviewed by Simon Fraser.

* rendering/RenderView.cpp:
(WebCore::RenderView::paintBoxDecorations):

* WebProcess/WebPage/WebPage.cpp:
(WebKit::WebPage::snapshotAtSize):
Avoid using an invalid documentBackgroundColor, fall back to baseBackgroundColor
like we did before r174287.


Canonical link: https://commits.webkit.org/165167@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@187039 268f45cc-cd09-0410-ab3c-d52691b4dbfc